--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "code/zlib-ng"]
 	path = code/zlib-ng
 	url = https://github.com/zlib-ng/zlib-ng.git
+[submodule "code/libcurl"]
+	path = code/libcurl
+	url = https://github.com/curl/curl.git
