--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "code/thirdparty/libjpeg-turbo"]
 	path = code/thirdparty/libjpeg-turbo
 	url = https://github.com/libjpeg-turbo/libjpeg-turbo.git
-[submodule "code/thirdparty/zlib-ng"]
-	path = code/thirdparty/zlib-ng
+[submodule "code/thirdparty/libz-ng"]
+	path = code/thirdparty/libz-ng
 	url = https://github.com/zlib-ng/zlib-ng.git
