--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Build
       run: |
-        make install -j$(nproc) PLATFORM=mingw64
+        make release -j$(nproc) PLATFORM=mingw64
 
     - uses: actions/upload-artifact@v6
       with:
@@ -68,7 +68,7 @@ jobs:
 
     - name: Build
       run: |
-        make install -j$(nproc) BUILD_SERVER=1
+        make release -j$(nproc) BUILD_SERVER=1
 
     - uses: actions/upload-artifact@v6
       with:
@@ -96,7 +96,7 @@ jobs:
 
     - name: Build
       run: |
-        make install -j$(nproc) BUILD_SERVER=1
+        make release -j$(nproc) BUILD_SERVER=1
 
     - uses: actions/upload-artifact@v6
       with:
@@ -122,8 +122,8 @@ jobs:
 
     - name: Build
       run: |
-        make install -j$(sysctl -n hw.logicalcpu) ARCH=x86_64 INSTALL=ginstall
-        make install -j$(sysctl -n hw.logicalcpu) ARCH=arm64 INSTALL=ginstall
+        make release -j$(sysctl -n hw.logicalcpu) ARCH=x86_64
+        make release -j$(sysctl -n hw.logicalcpu) ARCH=arm64
         ./make-macosx-app.sh release
         hdiutil create -format UDZO -srcfolder build/release-darwin-universal2/OmegA.app build/omega-engine-macos-universal2.dmg
 
